# QAppWS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES  eslint.config.js  install.sh  jsconfig.json  package-lock.json  package.json
qml/: WrapperTab.qml  main.qml  wrapper.qml
src/: app-id.js  app-installer-bridge.cpp  app-installer-bridge.hpp  app-installer.js  app-lister.js  app-metadata.js  app-recovery.js  app-uninstaller.js  app-update-checker.js  classify-from-data.js  classify-pipeline.js  desktop-entry.js  html-parser.js  icon-downloader.js  icon-resolver.js  index.js  main.cpp  manifest-fetcher.js  manifest-schema.js  metadata-extractor.js  qapp-wrapper-main.cpp  site-classifier-bridge.cpp  site-classifier-bridge.hpp  site-classifier.js  sw-detector.js  url-reachability.js  url-validator.js  web-fetcher.cpp  web-fetcher.hpp  wrapper-helper.cpp  wrapper-helper.hpp  xdg-paths.js
